# connect-four-webai

./: .gitignore  254.bundle.js  CNAME  Cargo.toml  LICENSE  README.md  bundle.js  index.html
.github/workflows/: build.yml  main.yml
benches/: benches.rs  bitboard.rs  engine.rs  gameboard.rs  solver.rs
cli/: Cargo.toml
game/: Cargo.toml
game/.cargo/: config.toml
game/src/: main.rs
solver/: Cargo.toml
solver/benches/: benches.rs  bitboard.rs  engine.rs
solver/src/: board.rs  engine.rs  lib.rs  mcgenerator.rs  transposition.rs
src/: BitBoard.rs  Engine.rs  bit_solver.rs  board.rs  engine.rs  lib.rs  logic.rs  transposition.rs
www/: Dockerfile  bootstrap.js  index.html  index.js  mime.types  package-lock.json  package.json  webpack.config.js
