[package]
name = "c4solver"
version = "0.1.0"
authors = ["Hendrik Trojan <h.trojan.github@posteo.de>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
hashbrown = "0.12.3"
getrandom = {version = "0.2", features = ["js"]}
rand = {version = "0.8.3"}


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
#wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
criterion = "0.4.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = 3

[profile.test]
#opt-level = 3

[package.metadata.wasm-pack.profile.release]
#wasm-opt = ["-O", "--debug", "--enable-mutable-globals"]
wasm-opt = ["-O4"]

[[bench]]
name = "benches"
harness = false
